--- a/MosquitoDetectionOfFoodBags/ui/MDOFoodBags.ui
+++ b/MosquitoDetectionOfFoodBags/ui/MDOFoodBags.ui
@@ -24,9 +24,9 @@
         </property>
         <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="0">
-          <layout class="QVBoxLayout" name="verticalLayout_2" stretch="3,1">
+          <layout class="QVBoxLayout" name="verticalLayout_2" stretch="3,0,1">
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,1">
+            <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,0,1">
              <item>
               <widget class="QLabel" name="label_imgDisplay_1">
                <property name="sizePolicy">
@@ -43,6 +43,13 @@
                </property>
                <property name="text">
                 <string>TextLabel</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="Line" name="line_3">
+               <property name="orientation">
+                <enum>Qt::Orientation::Vertical</enum>
                </property>
               </widget>
              </item>
@@ -68,7 +75,14 @@
             </layout>
            </item>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,1,1,1,1">
+            <widget class="Line" name="line_8">
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,0,1,0,1,0,1,0,1">
              <item>
               <widget class="QLabel" name="label_imgNgDisplay_1">
                <property name="sizePolicy">
@@ -85,6 +99,13 @@
                </property>
                <property name="text">
                 <string>TextLabel</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="Line" name="line_4">
+               <property name="orientation">
+                <enum>Qt::Orientation::Vertical</enum>
                </property>
               </widget>
              </item>
@@ -108,6 +129,13 @@
               </widget>
              </item>
              <item>
+              <widget class="Line" name="line_5">
+               <property name="orientation">
+                <enum>Qt::Orientation::Vertical</enum>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QLabel" name="label_imgNgDisplay_3">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -127,6 +155,13 @@
               </widget>
              </item>
              <item>
+              <widget class="Line" name="line_6">
+               <property name="orientation">
+                <enum>Qt::Orientation::Vertical</enum>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QLabel" name="label_imgNgDisplay_4">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -142,6 +177,13 @@
                </property>
                <property name="text">
                 <string>TextLabel</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="Line" name="line_7">
+               <property name="orientation">
+                <enum>Qt::Orientation::Vertical</enum>
                </property>
               </widget>
              </item>
