--- a/MosquitoDetectionOfFoodBags/ui/MDOFoodBags.ui
+++ b/MosquitoDetectionOfFoodBags/ui/MDOFoodBags.ui
@@ -385,38 +385,40 @@ QGroupBox::title {
           <property name="title">
            <string/>
           </property>
-          <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1,1,1,1">
-           <item>
-            <layout class="QHBoxLayout" name="hLayout_info" stretch="1,1">
+          <layout class="QGridLayout" name="gridLayout_3">
+           <item row="0" column="0">
+            <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1,1,1,1,1">
              <item>
-              <widget class="QLabel" name="label_info">
-               <property name="styleSheet">
-                <string notr="true">QLabel {
+              <layout class="QHBoxLayout" name="hLayout_info" stretch="1,1">
+               <item>
+                <widget class="QLabel" name="label_info">
+                 <property name="styleSheet">
+                  <string notr="true">QLabel {
        font-size: 24px;        
        font-weight: bold;        
        color:  rgb(141, 141, 141);       
        padding: 5px 5px;     
        border-bottom: 2px solid #cccccc; 
     }</string>
-               </property>
-               <property name="text">
-                <string>统计信息</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="pbtn_resetProduct">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="styleSheet">
-                <string notr="true">QPushButton {
+                 </property>
+                 <property name="text">
+                  <string>统计信息</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="pbtn_resetProduct">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">QPushButton {
     padding: 6px 14px;
     border: 2px solid #CCC;
     border-radius: 4px;
@@ -434,20 +436,20 @@ QPushButton:pressed {
     border-color: #777;
     background-color: #EEE;
 }</string>
-               </property>
-               <property name="text">
-                <string>产量清零</string>
-               </property>
-              </widget>
+                 </property>
+                 <property name="text">
+                  <string>产量清零</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,1,1">
              <item>
-              <widget class="QRadioButton" name="rbtn_debug">
-               <property name="styleSheet">
-                <string notr="true">QRadioButton {
+              <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,1,1">
+               <item>
+                <widget class="QRadioButton" name="rbtn_debug">
+                 <property name="styleSheet">
+                  <string notr="true">QRadioButton {
     spacing: 8px;
     font-size: 20px;
     color: #333;
@@ -503,16 +505,16 @@ QRadioButton::indicator:pressed {
         stop:1 transparent
     );
 }</string>
-               </property>
-               <property name="text">
-                <string>调试模式</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="ckb_shibiekuang">
-               <property name="styleSheet">
-                <string notr="true">QCheckBox {
+                 </property>
+                 <property name="text">
+                  <string>调试模式</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="ckb_shibiekuang">
+                 <property name="styleSheet">
+                  <string notr="true">QCheckBox {
     spacing: 8px;
     font-size: 20px;
     color: #333;
@@ -569,16 +571,16 @@ QCheckBox::indicator:pressed {
         stop:1 transparent
     );
 }</string>
-               </property>
-               <property name="text">
-                <string>识别框</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="ckb_wenzi">
-               <property name="styleSheet">
-                <string notr="true">QCheckBox {
+                 </property>
+                 <property name="text">
+                  <string>识别框</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QCheckBox" name="ckb_wenzi">
+                 <property name="styleSheet">
+                  <string notr="true">QCheckBox {
     spacing: 8px;
     font-size: 20px;
     color: #333;
@@ -635,18 +637,91 @@ QCheckBox::indicator:pressed {
         stop:1 transparent
     );
 }</string>
-               </property>
-               <property name="text">
-                <string>文字</string>
-               </property>
-              </widget>
+                 </property>
+                 <property name="text">
+                  <string>文字</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QHBoxLayout" name="hLayout_remove">
              <item>
-              <widget class="QRadioButton" name="rbtn_removeFunc">
+              <layout class="QHBoxLayout" name="hLayout_remove">
+               <item>
+                <widget class="QRadioButton" name="rbtn_removeFunc">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">QRadioButton {
+    spacing: 8px;
+    font-size: 20px;
+    color: #333;
+    font-weight: bold;        
+    color:  rgb(0, 0, 0);       
+
+}
+
+/* 未选中状态 */
+QRadioButton::indicator {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    border: 2px solid #999;
+    background: #ffffff;
+}
+
+/* 悬停效果 */
+QRadioButton::indicator:hover {
+    border: 2px solid #666;
+}
+
+/* 选中状态 */
+QRadioButton::indicator:checked {
+    border: 2px solid #2196F3;
+}
+
+/* 选中时的内圆 */
+QRadioButton::indicator:checked {
+    background-color: qradialgradient(
+        cx:0.5, cy:0.5,
+        radius:0.4,
+        fx:0.5, fy:0.5,
+        stop:0 #2196F3,
+        stop:1 transparent
+    );
+}
+
+/* 禁用状态 */
+QRadioButton::indicator:disabled {
+    border: 2px solid #ccc;
+    background: #eee;
+}
+
+/* 点击动画效果 */
+QRadioButton::indicator:pressed {
+    border: 2px solid #1565C0;
+    background-color: qradialgradient(
+        cx:0.5, cy:0.5,
+        radius:0.5,
+        fx:0.5, fy:0.5,
+        stop:0 #BBDEFB,
+        stop:1 transparent
+    );
+}</string>
+                 </property>
+                 <property name="text">
+                  <string>剔除功能</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="rbtn_takePicture">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
                  <horstretch>0</horstretch>
@@ -712,103 +787,86 @@ QRadioButton::indicator:pressed {
 }</string>
                </property>
                <property name="text">
-                <string>剔除功能</string>
+                <string>采图</string>
+               </property>
+               <property name="autoExclusive">
+                <bool>false</bool>
                </property>
               </widget>
              </item>
-            </layout>
-           </item>
-           <item>
-            <widget class="QRadioButton" name="rbtn_takePicture">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">QRadioButton {
-    spacing: 8px;
-    font-size: 20px;
-    color: #333;
-    font-weight: bold;        
-    color:  rgb(0, 0, 0);       
-
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_8">
+               <item>
+                <widget class="QLabel" name="label">
+                 <property name="styleSheet">
+                  <string notr="true">QLabel {
+       font-size: 24px;        
+       font-weight: bold;        
+       color:  rgb(141, 141, 141);       
+       padding: 5px 5px;     
+       border-bottom: 2px solid #cccccc; 
+    }</string>
+                 </property>
+                 <property name="text">
+                  <string>曝光</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="pbtn_baoguang">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">QPushButton {
+    padding: 6px 14px;
+    border: 2px solid #CCC;
+    border-radius: 4px;
+    background-color: white;
+    color: #444;
+    font-size: 18px; 
 }
 
-/* 未选中状态 */
-QRadioButton::indicator {
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    border: 2px solid #999;
-    background: #ffffff;
+QPushButton:hover {
+    border-color: #999;
+    background-color: #F5F5F5;
 }
 
-/* 悬停效果 */
-QRadioButton::indicator:hover {
-    border: 2px solid #666;
-}
-
-/* 选中状态 */
-QRadioButton::indicator:checked {
-    border: 2px solid #2196F3;
-}
-
-/* 选中时的内圆 */
-QRadioButton::indicator:checked {
-    background-color: qradialgradient(
-        cx:0.5, cy:0.5,
-        radius:0.4,
-        fx:0.5, fy:0.5,
-        stop:0 #2196F3,
-        stop:1 transparent
-    );
-}
-
-/* 禁用状态 */
-QRadioButton::indicator:disabled {
-    border: 2px solid #ccc;
-    background: #eee;
-}
-
-/* 点击动画效果 */
-QRadioButton::indicator:pressed {
-    border: 2px solid #1565C0;
-    background-color: qradialgradient(
-        cx:0.5, cy:0.5,
-        radius:0.5,
-        fx:0.5, fy:0.5,
-        stop:0 #BBDEFB,
-        stop:1 transparent
-    );
+QPushButton:pressed {
+    border-color: #777;
+    background-color: #EEE;
 }</string>
-             </property>
-             <property name="text">
-              <string>采图</string>
-             </property>
-             <property name="autoExclusive">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="Line" name="line">
-             <property name="orientation">
-              <enum>Qt::Orientation::Horizontal</enum>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="pbtn_openSaveLocation">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="styleSheet">
-              <string notr="true">QPushButton {
+                 </property>
+                 <property name="text">
+                  <string>Value</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="Line" name="line">
+               <property name="orientation">
+                <enum>Qt::Orientation::Horizontal</enum>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pbtn_openSaveLocation">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">QPushButton {
     padding: 6px 14px;
     border: 2px solid #CCC;
     border-radius: 4px;
@@ -826,11 +884,13 @@ QPushButton:pressed {
     border-color: #777;
     background-color: #EEE;
 }</string>
-             </property>
-             <property name="text">
-              <string>打开存储位置</string>
-             </property>
-            </widget>
+               </property>
+               <property name="text">
+                <string>打开存储位置</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
           </layout>
          </widget>
